refactored margins and corrected misalignment of navimg and herodiv

--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,36 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
 header {
   width: 100%;
   background-color: #ddd;
-  height: 70px;
+  height: 100px;
+
+}
+
+nav {
+  max-width: 960px;
+  text-align: center;
+  margin: auto;
 }
 
 ul {
   display: flex;
   align-items: stretch;
   flex-flow: row nowrap;
-  justify-content: space-between;
-  margin-top: 0;
-  margin-left: 0;
+  /* justify-content: space-between; */
+  justify-content: center;
+  /* margin-top: 0; */
+  margin: auto;
+  /* max-width: 960px; */
   vertical-align: top;
   box-sizing: border-box;
+
 }
 
 ul li {
@@ -29,6 +44,7 @@ ul li {
   height: 70px;
   line-height: 70px;
   box-sizing: border-box;
+  margin-top: 15px;
 }
 
 #navimg {
@@ -36,14 +52,21 @@ ul li {
   vertical-align: top;
   min-width: 200px;
   max-height: 70px;
-  margin-left: 12%;
+  /* margin-left: 12%; */
   float: left;
   box-sizing: border-box;
+  margin-top: 15px;
 }
+
+
+/* main {
+  margin: 0 12% 0 12%;
+} */
+
 
 #herodiv {
   width: 100%;
-  background-color: white
+  background-color: white;
 }
 
 p#hero {
@@ -58,18 +81,17 @@ p#hero {
 }
 
 .midpageimg {
-  margin-left: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 15px 0px;
 }
 
  .midpageimg:first-child {
-   margin-left: 0px;
+   margin: 30px 15px 0px;
  }
 
 #bottomleftsection {
   margin-left: 30px;
   margin-bottom: 30px;
+  margin-top: 30px;
   width: 480px;
   height: 400px;
   display: inline-block;
@@ -87,7 +109,7 @@ p#hero {
   position: relative;
   display: inline-block;
   vertical-align: top;  
-  margin-top: 0px;
+  margin-top: 30px;
   margin-bottom: 0px;
   margin-left: 30px;
   width: 480px;
